[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/BruhTP3.tres" type="Resource" id=1]
[ext_resource path="res://view/prototypes/Thoughts.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/uwu.png" type="Texture" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://assets/bro.png" type="Texture" id=5]
[ext_resource path="res://view/prototypes/messenjer.gd" type="Script" id=6]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://view/Offset.tscn" type="PackedScene" id=8]
[ext_resource path="res://view/CurrentThought.gd" type="Script" id=9]
[ext_resource path="res://assets/Roboto.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 19
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 19
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "goto_next_level"
} ]
}

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NinePatch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Control")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "What u up to" ],
"method": "new_other_message"
} ]
}

[node name="Game" type="Node"]
script = ExtResource( 4 )
thought_process = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
replies = [ "Do you want to watch volleyball anime", null, "To tell the doctor tomorrow yea", "?", "Maybe you could tell me something?", "Volleyball anime?", null ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer"]
margin_right = 240.0
margin_bottom = 600.0
rect_min_size = Vector2( 240, 0 )
size_flags_vertical = 3
color = Color( 0.94902, 0.94902, 0.94902, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 642.0
custom_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 60.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Control" type="Panel" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 97.0
rect_min_size = Vector2( 0, 22 )

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Search Messenjer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 112.0
margin_right = 200.0
margin_bottom = 172.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 175.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Big Chungus"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 111.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You: gdi"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 187.0
margin_right = 200.0
margin_bottom = 247.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 64.0
margin_right = 175.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 111.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SC2 Fanclub"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 28.0
margin_right = 111.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You: 1v1 me rn"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 262.0
margin_right = 200.0
margin_bottom = 322.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer4"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 64.0
margin_right = 169.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwww"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwwwww"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 337.0
margin_right = 200.0
margin_bottom = 397.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer5"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 64.0
margin_right = 169.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer5/VBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwww"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer5/VBoxContainer"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwwwww"

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 412.0
margin_right = 200.0
margin_bottom = 472.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer6"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer6"]
margin_left = 64.0
margin_right = 169.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer6/VBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwww"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer6/VBoxContainer"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwwwww"

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 487.0
margin_right = 200.0
margin_bottom = 547.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer7"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer7"]
margin_left = 64.0
margin_right = 169.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer7/VBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwww"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer7/VBoxContainer"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwwwww"

[node name="HBoxContainer8" type="HBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 562.0
margin_right = 200.0
margin_bottom = 622.0

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer8"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer8"]
margin_left = 64.0
margin_right = 169.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer8/VBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwww"

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect/MarginContainer2/VBoxContainer/HBoxContainer8/VBoxContainer"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "wwwwwwwww"

[node name="Chat" type="ColorRect" parent="Control/HBoxContainer"]
margin_left = 246.0
margin_right = 778.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.94902, 0.94902, 0.94902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/Chat"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messagelog" type="VBoxContainer" parent="Control/HBoxContainer/Chat/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 512.0
margin_bottom = 663.0
grow_vertical = 0
custom_constants/separation = 19
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mychat2" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 285.0
margin_top = 19.0
margin_right = 492.0
margin_bottom = 68.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
text = "also napping to avoid
responsibility intensifies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/mychat2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="otherchat" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 87.0
margin_right = 114.0
margin_bottom = 110.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "You're a goon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/otherchat"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.537255, 0.537255, 0.537255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer2" type="Control" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 129.0
margin_right = 492.0
margin_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="otherchat2" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 148.0
margin_right = 170.0
margin_bottom = 171.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Please keep it down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/otherchat2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.537255, 0.537255, 0.537255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mychat" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 450.0
margin_top = 190.0
margin_right = 492.0
margin_bottom = 213.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
text = "sorry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/mychat"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer3" type="Control" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 232.0
margin_right = 492.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 249.0
margin_top = 251.0
margin_right = 492.0
margin_bottom = 300.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "oh yeah one thing im worried
about about moving upstairs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 125.0
margin_top = 319.0
margin_right = 492.0
margin_bottom = 342.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "is what if our ethernet stuff has interference"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label3"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 361.0
margin_right = 244.0
margin_bottom = 384.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Is that how electricity works?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label4"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.537255, 0.537255, 0.537255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 463.0
margin_top = 403.0
margin_right = 492.0
margin_bottom = 426.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "yea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label5"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 217.0
margin_top = 445.0
margin_right = 492.0
margin_bottom = 468.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "*powerline stuff has interference"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label6"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 487.0
margin_right = 230.0
margin_bottom = 510.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "You can test on your laptop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label7"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.537255, 0.537255, 0.537255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 388.0
margin_top = 529.0
margin_right = 492.0
margin_bottom = 552.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "oh yea hmm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label8"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_left = 307.0
margin_top = 571.0
margin_right = 492.0
margin_bottom = 594.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "im lazy asf tho so nah"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Label9"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.8909
margin_right = 10.0
margin_bottom = 9.1091
rect_min_size = Vector2( 0, 30 )
color = Color( 0.117647, 0.521569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Control" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
visible = false
margin_top = 594.0
margin_right = 492.0
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chatbox" type="ColorRect" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog"]
margin_top = 613.0
margin_right = 492.0
margin_bottom = 643.0
rect_min_size = Vector2( 0, 30 )
color = Color( 0.788235, 0.788235, 0.788235, 1 )

[node name="CurrentThought" type="Label" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Chatbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offset" parent="Control/HBoxContainer/Chat/MarginContainer/messagelog/Chatbox/CurrentThought" instance=ExtResource( 8 )]

[node name="ColorRect3" type="ColorRect" parent="Control/HBoxContainer"]
margin_left = 784.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 240, 0 )
size_flags_vertical = 3
color = Color( 0.94902, 0.94902, 0.94902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/ColorRect3/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 580.0

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/ColorRect3/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect3/MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 200.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Big Chungus"
align = 1

[node name="Label2" type="Label" parent="Control/HBoxContainer/ColorRect3/MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.27451, 0.27451, 0.27451, 1 )
text = "Active Now"
align = 1

[node name="AllThoughts" parent="." instance=ExtResource( 2 )]
margin_left = 782.0
margin_top = 212.0
stuff = NodePath("../../Game/AllThoughts/Control")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Load"
anims/Complete = SubResource( 6 )
anims/Load = SubResource( 7 )

[node name="Fade" type="ColorRect" parent="AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.18921
margin_bottom = -1.18921
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finish" from="." to="." method="_on_Game_finish"]
[connection signal="found_bad_thought" from="." to="AllThoughts" method="_on_Game_found_bad_thought"]
[connection signal="new_thought" from="." to="AllThoughts" method="_on_Game_new_thought"]
[connection signal="submit_good_thought" from="." to="AllThoughts" method="_on_Game_submit_good_thought"]
[connection signal="submit_good_thought" from="." to="Control" method="_on_Game_submit_good_thought"]
[connection signal="update_thought" from="." to="Control" method="_on_Game_update_thought"]
